Add breadcrumbs and initial responsiveness

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,5 @@
 <app-nav></app-nav>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
-<p>a</p>
+<app-breadcrumbs></app-breadcrumbs>
 <p>a</p>
 <p>a</p>
 <p>a</p>
