--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,25 @@ body {
 * {
   box-sizing: border-box;
 }
+
+a:link, a:hover, a:active, a:visited {
+  color: inherit;
+  text-decoration: underline;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1280px;
+}
+
+.only-mobile {
+  @media all and (min-width: 769px) {
+    display: none;
+  }
+}
+
+.only-desktop {
+  @media all and (max-width: 768px) {
+    display: none;
+  }
+}
