--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
 body {
   margin: 0;
   font-family: 'IBM Plex Sans Thai';
+  background-image: url('https://search-merchant.xn--42caj4e6bk1f5b1j.com/images/result-bg.png');
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 * {
