Split merchant card, add single-call API and add proxy

--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,8 +1,11 @@
 <div class="result">
   <h2>ผลการค้นหา ร้านอาหารและเครื่องดื่ม ทั้งหมด</h2>
   <div class="flex">
-    <div class="sidebar-filter">
+    <div class="sidebar-filter only-desktop">
       <app-filter [filter]="filter" [data]="data"></app-filter>
+    </div>
+    <div class="main-result">
+      <app-merchant-card *ngFor="let merchant of data.merchants" [merchant]="merchant"></app-merchant-card>
     </div>
   </div>
 </div>
