--- a/src/app/result/result.component.scss
+++ b/src/app/result/result.component.scss
@@ -18,4 +18,10 @@ h2 {
   padding: 16px;
   background-color: #fff;
   border: 1px solid #a0aec0;
+  margin-right: 32px;
 }
+
+.main-result {
+  flex-grow: 1;
+}
+
