--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -64,3 +64,28 @@
   margin-right: 16px;
   width: 20px;
 }
+
+.filter-header {
+  width: 100%;
+  height: 64px;
+  background-color: #2a4365;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 100;
+}
+
+.filter-back-icon {
+  position: absolute;
+  left: 16px;
+  cursor: pointer;
+}
+
+.filter-body {
+  margin-top: 64px;
+  padding: 24px;
+}
