--- a/src/app/result/result.component.scss
+++ b/src/app/result/result.component.scss
@@ -11,11 +11,11 @@ h2 {
 
 .flex {
   display: flex;
+  align-items: flex-start;
 }
 
 .sidebar-filter {
   width: 350px;
-  padding: 16px;
   background-color: #fff;
   border: 1px solid #a0aec0;
   margin-right: 32px;
@@ -25,3 +25,10 @@ h2 {
   flex-grow: 1;
 }
 
+.show-more {
+  width: 100%;
+  max-width: 382px;
+  height: 50px;
+  margin: 40px auto 0 auto;
+  display: block;
+}
