Fine grained text margins

--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -6,6 +6,8 @@ h3 {
   margin: 0;
   font-weight: 600;
   letter-spacing: -0.02em;
+  line-height: 1.65;
+  font-size: 16px;
 }
 
 .radio-group {
@@ -13,7 +15,7 @@ h3 {
 }
 
 .radio-wrapper {
-  margin: 8px 0;
+  line-height: 30px;
 }
 
 .top-margin {
