--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,5 +1,7 @@
 <div class="result">
-  <h2>ผลการค้นหา ร้านอาหารและเครื่องดื่ม ทั้งหมด</h2>
+  <div class="heading-container">
+    <h2>ผลการค้นหา ร้านอาหารและเครื่องดื่ม ทั้งหมด</h2>
+  </div>
   <div class="flex">
     <div class="sidebar-filter only-desktop">
       <app-filter [filter]="filter" [data]="data"></app-filter>
