--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <div class="nav">
-  <div class="nav-container">
+  <div class="container">
     <div class="logo only-desktop">
       <img src="https://search-merchant.xn--42caj4e6bk1f5b1j.com/images/halfhalf-logo.png" height="40" />
     </div>
