--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -2,10 +2,8 @@
   background-color: #fff;
 }
 
-.nav-container {
-  max-width: 1280px;
+.container {
   height: 60px;
-  margin: 0 auto;
 
   display: flex;
   align-items: center;
