--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -2,11 +2,11 @@
   <div class="heading-container">
     <h2>ผลการค้นหา ร้านอาหารและเครื่องดื่ม ทั้งหมด</h2>
   </div>
-  <div class="flex">
-    <div class="sidebar-filter only-desktop">
+  <div class="filter-result">
+    <div class="filter-container only-desktop">
       <app-filter [filter]="filter" [data]="data"></app-filter>
     </div>
-    <div class="main-result">
+    <div class="merchant-list">
       <app-merchant-card *ngFor="let merchant of data.merchants" [merchant]="merchant"></app-merchant-card>
       <button nz-button class="show-more">ดูเพิ่มเติม</button>
     </div>
