--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,10 @@ a:link, a:hover, a:active, a:visited {
   max-width: 1280px;
 }
 
+.splitter {
+  margin: 0 12px;
+}
+
 .only-mobile {
   @media all and (min-width: 769px) {
     display: none;
