--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-nav></app-nav>
+<app-nav [filter]="filter"></app-nav>
 <app-breadcrumbs></app-breadcrumbs>
-<app-result></app-result>
+<app-result [filter]="filter"></app-result>
