--- a/src/app/result/result.component.scss
+++ b/src/app/result/result.component.scss
@@ -40,3 +40,20 @@ h2 {
   margin: 40px auto 0 auto;
   display: block;
 }
+
+.notfound-title {
+  font-size: 36px;
+  margin-top: 80px;
+  text-align: center;
+  line-height: 1.65;
+  font-weight: 700;
+  letter-spacing: -0.02em;
+}
+
+.notfound-body {
+  margin-top: 16px;
+  text-align: center;
+  font-size: 16px;
+  letter-spacing: -0.02em;
+  line-height: 1.65;
+}
