--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ body {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  color: rgba($color: #000000, $alpha: 0.85);
 }
 
 * {
